--- a/z-trip/shoppingcar/css/style.css
+++ b/z-trip/shoppingcar/css/style.css
@@ -77,14 +77,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eceff8', end
 .main_shoppingcar .buy_list .product_info .bottom_item .voucher input.error{ border-color: #fd735c; }
 .main_shoppingcar .buy_list .product_info .bottom_item .voucher input.correct{ border-color: #35e0ce; }
 
-.main_shoppingcar .buy_list .product_info .bottom_item .voucher .code_note{ position: absolute; top: 41px; left: 20px; }
+.main_shoppingcar .buy_list .product_info .bottom_item .voucher .code_note{ position: absolute; top: 41px; left: 20px; z-index: 10; }
 .main_shoppingcar .buy_list .product_info .bottom_item .voucher .code_note p{ font-size: 13px; line-height: 20px; color: #fff; background-color: #555555; border-radius: 4px; padding:6px 10px; position: relative;}
 .main_shoppingcar .buy_list .product_info .bottom_item .voucher .code_note p span{ color: #fff95d; }
 .main_shoppingcar .buy_list .product_info .bottom_item .voucher .code_note p::after{content: ""; top: -7px; left: 14px; position: absolute; width: 0; height: 0; border-style: solid; border-width: 0 7px 7px 7px; border-color: transparent transparent #555555 transparent; line-height: 0px; _border-color: #000000 #000000 #555555 #000000; _filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000');}
+.main_shoppingcar .buy_list .product_info .bottom_item .voucher .for_w_more{ min-width: 335px; }
 
 .main_shoppingcar .buy_list .product_info .bottom_item .redbox-checkbox{ float: left;padding-top: 4px; }
 .main_shoppingcar .buy_list .product_info .bottom_item .redbox-checkbox a{ color: #686868; font-size: 15px; }
 .main_shoppingcar .buy_list .product_info .bottom_item .redbox-checkbox a:hover{ text-decoration: underline; }
+
 .main_shoppingcar .redbox-checkbox{ position: relative; }
 .main_shoppingcar .redbox-checkbox span{ padding-left: 10px; }
 .main_shoppingcar .redbox-checkbox input[type="radio"], .main_shoppingcar .redbox-checkbox input[type="checkbox"] { width: 17px; height: 17px; opacity: 0; }
@@ -108,6 +110,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eceff8', end
 .main_shoppingcar .total_amount p{ float: left; display: inline-block; padding: 0 20px; line-height:44px;}
 .main_shoppingcar .total_amount p.all{float: right; font-weight: bold; line-height: 39px;}
 .main_shoppingcar .total_amount p.all span{ color: #ff1955; font-size: 30px; padding: 0 20px; }
+.main_shoppingcar .total_amount p.mob{ display: none; }
 
 /*fill_info  填寫資料*/
 .main_shoppingcar .fill_info, .main_shoppingcar .pay_info{ width: 100%; padding: 15px 0; }
@@ -128,19 +131,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eceff8', end
 .main_shoppingcar .styled-select { border: 1px solid #e0e0e0; width:100%; border-radius: 4px; min-height: 36px; -webkit-transition: all 0.30s ease-in-out;  -moz-transition: all 0.30s ease-in-out;  -ms-transition: all 0.30s ease-in-out;  -o-transition: all 0.30s ease-in-out; overflow: hidden; background: url(../images/icon_arr.png) right center no-repeat #fff; background-size: contain;}
 .main_shoppingcar .styled-select select.md-input { width:100%; padding: 2px 30px 2px 10px; min-height: 36px; line-height: 34px; *width:120%; _width:120%;  background:transparent; text-align: center;  font-size: 15px; border: 0; border-radius:0; -webkit-appearance: none;  }
 .main_shoppingcar .styled-select select.md-input option{ background-color:#fff; text-align: center; color: #333;}
-.main_shoppingcar .box3{ padding-bottom: 10px; }
-.main_shoppingcar .box3 .styled-select{ float: left; margin-left: 15px; }
+/*.main_shoppingcar .box3{ padding-bottom: 5px; }*/
+.main_shoppingcar .box3 .styled-select{ float: left; margin-left: 15px; margin-bottom: 10px; }
 .main_shoppingcar .box3 input.fbox{ float: left; }
 .main_shoppingcar .box3 .styled-select:first-child{ margin-left: 0; }
 
-.main_shoppingcar .h_ex{ min-height: 80px; }
+.main_shoppingcar .h_ex{ min-height: 88px; }
 .main_shoppingcar .w_00{ max-width: 88px; }
 .main_shoppingcar .w_01{ max-width: 165px; }
 .main_shoppingcar .w_02{ max-width: 139px; }
 
 .main_shoppingcar .store_btn{ border-radius: 4px; cursor: pointer; background-color: #ff8a00; color: #fff; line-height: 34px; padding: 0 10px; margin-left: 8px; }
 .main_shoppingcar .store_btn:hover{ opacity: .9; }
-.main_shoppingcar .right_fillbox .redbox-checkbox span{ padding-top: 7px; padding-bottom: 10px; display: inline-block; font-size: 13px; color: #333;}
+.main_shoppingcar .right_fillbox .redbox-checkbox span{ padding-top: 7px; padding-bottom: 10px; font-size: 13px; line-height: 30px; color: #333;}
 
 .bottom_terms{ width: 100%; max-width: 1000px; margin: 0 auto; border-top: 1px solid #333; padding: 30px; margin-top: 60px; }
 .bottom_terms li{ padding: 5px 0; }
@@ -153,22 +156,72 @@ p.btn_org a{ background-color: #ff8a00; width: 100%; color: #fff; border-radius:
 p.btn_org a:hover{ opacity: .8; }
 p.btn_red a{ background-color: #ff3564;  }
 
-/*==== RWD ====*/
 
-@media screen and (max-height:750px){
+/*==== RWD ====*/
+@media (max-width:1020px){
+	.contents_box , .main_shoppingcar .top_step ul, .main_shoppingcar .buy_list ul{ width:calc(100% - 30px); margin: 0 auto;}
 }
-@media (max-width:1650px){
-}
-@media (max-width:1410px){
-	.ContentsBox{ width:calc(100% - 40px); margin: 0 auto;}
+@media (max-width:1000px){
+	.main_shoppingcar .buy_list ul li{ height: initial;  position: relative;}
+	.main_shoppingcar .buy_list .product_photo{ position: absolute; top: 15px; left: 15px; width: 120px; height: 132px; }
+	.main_shoppingcar .buy_list .product_info{width: 100%; padding-left: 155px; padding-bottom: 25px;}
+	.main_shoppingcar .buy_list .product_subtotal{ width: 100%; display: initial; -webkit-align-items: initial; align-items: initial; -webkit-justify-content: initial; justify-content: initial; }
+	.main_shoppingcar .buy_list .product_subtotal .exbox{ width: 100%; border-top: 1px solid #dddddd; border-left: none; padding: 10px 20px; }
+	.main_shoppingcar .buy_list .product_subtotal p.note_code{ float: right; line-height: 45px; }
+	.main_shoppingcar .buy_list .product_subtotal p.s_money{ float: right; line-height: 45px; padding-left: 25px; }
+	.main_shoppingcar .buy_list .product_subtotal p.s_money span{ display: inline-block;padding: 0; padding-left: 20px;  }
+	p.btn_red{ position: fixed; width: 150px; z-index: 100; bottom: 20px; right: 15px; padding: 0; letter-spacing: 1px; }
 }
 @media (max-width:900px){
+	.main_shoppingcar .top_step ul li p{ font-size: 18px; }
+	.main_shoppingcar .total_amount{ position: fixed; bottom: 0; width: 100%; left: 0; z-index: 100; box-shadow: 0 0 5px rgba(0,0,0,.2); padding: 15px 20px; }
+	.main_shoppingcar .total_amount p.pc{ display: none; }
+	.main_shoppingcar .total_amount p.mob{ display: block; float: none; line-height: initial; padding: 0;}
+	.main_shoppingcar .total_amount p.all{ float: none; padding: 0; }
+	.main_shoppingcar .total_amount p.all span{padding: 0 10px;}
 }
-@media (max-width:850px){
+@media (max-width:800px){
+	.main_shoppingcar .top_step ul li p{ font-size: 16px; }
+	.main_shoppingcar .top_step ul li p span{ display: block; }
+
+	.main_shoppingcar .buy_list .product_photo{ width:92px; height:102px; }
+	.main_shoppingcar .buy_list .product_info{ padding:15px 20px;}
+	.main_shoppingcar .buy_list .product_info h3{ font-size: 17px; padding-left: 110px; min-height: 45px; margin-bottom: 3px; padding-right: 15px; }
+	.main_shoppingcar .buy_list .product_info .product_item{ padding-left: 110px; min-height: 50px;}
+	.main_shoppingcar .buy_list .product_info .product_item span{ display: none; }
+	.main_shoppingcar .buy_list .product_info .product_item p{ font-size: 14px; line-height: 24px; }
+	.main_shoppingcar .buy_list .product_info .bottom_item .redbox-checkbox{ width: 100%; margin-top: 10px; }
+	.main_shoppingcar .buy_list .product_subtotal p.note_code{ float: left; }
+
+	.main_shoppingcar .buy_list .product_info .bottom_item .voucher .for_w_more{ min-width: initial; }
 }
-@media (max-width:780px){
-}
-@media (max-width:750px){
+@media (max-width:700px){
+	.main_shoppingcar .top_step ul li{padding: 15px 0;}
+	.main_shoppingcar .top_step ul li p{ font-size: 15px; }
+	.main_shoppingcar .fill_info, .main_shoppingcar .pay_info{ width:calc(100% - 30px); margin:0 auto; }
+	.main_shoppingcar .box3 .styled-select, .main_shoppingcar .w_01{ max-width: 100%; margin-left:0;  }
+	.main_shoppingcar .w_00{ margin-bottom: 10px; }
+	.main_shoppingcar .store_btn{ margin: 8px 0 0 0; }
+
+	.main_shoppingcar .total_amount{padding: 10px 15px;}
+	.main_shoppingcar .total_amount p.all span{ font-size: 25px;}
+	p.btn_org{ max-width: 150px; }
+	p.btn_org a{ line-height: 42px;}
+	p.btn_red{ width: 100px; letter-spacing: 0;}
+	p.btn_red a{}
 }
 @media (max-width:500px){
+	.main_shoppingcar .buy_list .product_info .bottom_item .voucher{ padding: 0 0 0 10px;width: calc(100% - 140px); }
+	.main_shoppingcar .buy_list .product_info .bottom_item .voucher input{ width: 100%; }
+	.main_shoppingcar .top_step ul li p{ font-size: 14px; }
+	.main_shoppingcar .shoppingcar_form_box{padding: 15px 20px;}
+	.main_shoppingcar .shoppingcar_form_box .for_w100{ width: 100%; }
+}
+@media (max-width:360px){
+	.main_shoppingcar .buy_list .product_info .product_item p{ font-size: 13px; line-height: 20px; }
+	.main_shoppingcar .buy_list .product_info .bottom_item .voucher{ width: calc(100% - 120px);}
+	.main_shoppingcar .buy_list .product_info .bottom_item .input_quantity button{ width: 33px; }
+	.main_shoppingcar .buy_list .product_info .bottom_item .input_quantity input{ padding: 2px 5px; width: 42px; }
+	.main_shoppingcar .buy_list .product_info .bottom_item .redbox-checkbox a{ font-size: 14px; }
+	.main_shoppingcar .buy_list .product_subtotal p.note_code{ float: right; font-size: 13px; }
 }
